force-app/main/default/objects/Eligibility_Criteria__c/Eligibility_Criteria__c.object-meta.xml
<CustomObject>
    <label>Eligibility Criteria</label>
    <nameField>
        <displayFormat>AC-{00000000}</displayFormat>
        <label>Alert Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligibility Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>