force-app/main/default/objects/Eligibility_Criteria__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>Field_Name__c + &quot; &quot;+ TEXT( Operator__c )</description>
    <formula>Field_Name__c + &quot; &quot;+ TEXT( Operator__c )</formula>
    <label>Criteria</label>
    <type>Text</type>
</CustomField>