force-app/main/default/objects/Eligibility_Criteria__c/fields/Criteria_Number__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Number__c</fullName>
    <label>Criteria Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>