force-app/main/default/objects/Eligibility_Criteria__c/fields/Criteria_Value__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Value__c</fullName>
    <label>Criteria Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>