force-app/main/default/objects/Eligibility_Criteria__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>API Name of the fields. Cross objects reference such as Opportunity.Account.Customer_Number__c is allowed. Use AGGREGATE along with Aggregate Expression for calculated roll-up summary on child object</description>
    <inlineHelpText>API Name of the fields. Cross objects reference such as Opportunity.Account.Customer_Number__c is allowed. Use AGGREGATE along with Aggregate Expression for calculated roll-up summary on child object</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>